Restore Java 8 support (closes #10) (#12)